--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "builds": [
-    { "src": "vite.config.ts", "use": "@vercel/static-build", "config": {} }
-  ],
   "framework": "vite",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
